# rsaitehu-geometry

./: README.md  pyproject.toml
doc/: requirements.txt
doc/source/: conf.py  geometry_module_doc.rst  index.rst  main.rst
rsaitehu_geometry/: __init__.py  main.py
rsaitehu_geometry/examples/: example_find_closest_plane.py  example_fit_plane_svd.py  example_get_a_polygon_from_plane_equation_and_point.py  example_get_angle_between_lines.py  example_get_angle_between_planes.py  example_get_angle_between_vectors.py  example_get_best_plane_from_points_from_two_segments.py  example_get_centroid_of_points.py  example_get_distance_from_points_to_plane.py  example_get_intersection_point_of_line_with_plane.py  example_get_intersection_points_of_line_with_cube.py  example_get_limits_of_graph_from_limits_of_object.py  example_get_parallelepiped_vertices.py  example_get_parallelogram_vertices.py  example_get_plane_equation.py  example_get_plane_from_list_of_three_points.py  example_get_point_of_plane_closest_to_given_point.py  example_get_two_perpendicular_unit_vectors_in_plane.py
source/: conf.py  index.rst
