# rsaitehu-pointcloud/pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsaitehu-geometry"
version = "0.0.1"
authors = [
  { name="José María Martínez Otzeta", email="jmartinezot@gmail.com" },
]
description = "Geometric utilities"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.22.0",
  "scipy>=1.9.3"
]

[project.urls]
"Homepage" = "https://github.com/pypa/rsaitehu-geometry"
"Bug Tracker" = "https://github.com/pypa/rsaitehu-geometry/issues"

[tool.hatch.build.targets.wheel]
packages = ["rsaitehu_geometry"]



